started with the page and design the header

--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="ar" dir="rtl">
 <head>
-	<title> mbc2</title>
+	<link rel="shortcut icon" href="./imgs/favicon.ico">
+	<link rel="stylesheet" type="text/css" href="./style.css">
+	<title> mbc2 </title>
 </head>
 <body>
+	<header>
+		<div class="header">
+			<div class="header1">
+				<img src="./imgs/logo-mbc@3x.png" class="logo">
+				<div class="header2">
+				<h3>الرئيسية</h3>
+				<h3>البرامج</h3>
+				<h3>القنوات</h3>
+				<h3>جدول البرامج</h3>
+				<h3>تطبيقات ومسابقات</h3>
+				</div>
+			</div>
+			<div>
+				<input type="search" name="search" placeholder="بحث" rel="search" />
+			</div>
+		</div>	
+	</header>
 	<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
