create favicon, designed the header, started with the body

--- a/index.html
+++ b/index.html
@@ -1,28 +1,42 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-	<link rel="shortcut icon" href="./imgs/favicon.ico">
-	<link rel="stylesheet" type="text/css" href="./style.css">
-	<title> mbc2 </title>
-</head>
-<body>
-	<header>
-		<div class="header">
-			<div class="header1">
-				<img src="./imgs/logo-mbc@3x.png" class="logo">
-				<div class="header2">
-				<h3>الرئيسية</h3>
-				<h3>البرامج</h3>
-				<h3>القنوات</h3>
-				<h3>جدول البرامج</h3>
-				<h3>تطبيقات ومسابقات</h3>
+	<!DOCTYPE html>
+	<html lang="ar" dir="rtl">
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap" rel="stylesheet">
+		<link rel="shortcut icon" href="./imgs/favicon.ico">
+		<link rel="stylesheet" type="text/css" href="./style.css">
+		<title> mbc2 </title>
+	</head>
+	<body>
+		<header>
+			<div class="header">
+				<div class="header1">
+					<div class="list-logo">
+						<div class="logo"> <img src="./imgs/logo-mbc@3x.png" class="logo"> </div>
+					<ul>
+						<li> الرئيسية </li>
+						<li> البرامج  </li>
+						<li> القنوات  </li>
+						<li> جدول البرامج   </li>
+						<li> تطبيقات ومسابقات  </li>						
+					</ul>
+					</div>
+				<div>
+					<input type="search" name="search" placeholder="بحث" rel="search" class="search" />
 				</div>
-			</div>
-			<div>
-				<input type="search" name="search" placeholder="بحث" rel="search" />
-			</div>
-		</div>	
-	</header>
-	<script type="text/javascript" src="main.js"></script>
-</body>
-</html>
+				</div>
+			</div>	
+		</header>
+
+		<div class="part1">
+			<img src="./imgs/Scoop-with-Raya-desktop-Final.jpg">
+			<img src="./imgs/Star-of-the-month--Amy-Adams-desktop.jpg">
+		</div>
+
+		<div class="shows">
+			<h2> يعرض الان  </h2>
+			<h3> التوقيت المحلي </h3>
+		</div>
+		<script type="text/javascript" src="main.js"></script>
+	</body>
+	</html>
