finish with html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 	<!DOCTYPE html>
 	<html lang="ar" dir="rtl">
 	<head>
+		<meta charset="utf-8">
+    	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+			  integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap" rel="stylesheet">
 		<link rel="shortcut icon" href="./imgs/favicon.ico">
 		<link rel="stylesheet" type="text/css" href="./style.css">
@@ -13,12 +17,12 @@
 				<div class="header1">
 					<div class="list-logo">
 						<div class="logo"> <img src="./imgs/logo-mbc@3x.png" class="logo"> </div>
-					<ul>
-						<li> الرئيسية </li>
-						<li> البرامج  </li>
-						<li> القنوات  </li>
-						<li> جدول البرامج   </li>
-						<li> تطبيقات ومسابقات  </li>						
+					<ul class="head-ul">
+						<li> <a href="https://www.mbc.net/home-page"></a> الرئيسية </li>
+						<li> <a href="https://www.mbc.net/shows"></a> البرامج  </li>
+						<li> <a href="https://www.mbc.net/channels"></a> القنوات </li>
+						<li> <a href="https://www.mbc.net/grid"></a>جدول البرامج  </li>
+						<li> <a href="https://www.mbc.net/apps"></a> تطبيقات ومناسبات </li>						
 					</ul>
 					</div>
 				<div>
@@ -35,8 +39,49 @@
 
 		<div class="shows">
 			<h2> يعرض الان  </h2>
-			<h3> التوقيت المحلي </h3>
+			<span> التوقيت المحلي </span>
 		</div>
+
+		<ul>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+
+		<p class="text-center">
+			<a href="https://www.mbc.net/channels/mbc2/grid" class="btn btn-default">الجدول كاملاً</a>
+		</p>
+
+		<div class="programs">
+			<h2 class="h2"> برامجنا  </h2>
+			<div class="programmes">
+				<img src="./imgs/Capture1.PNG">
+				<img src="./imgs/Capture2.PNG">
+				<img src="./imgs/Capture3.PNG">
+				<img src="./imgs/Capture4.PNG">
+				<img src="./imgs/Capture5.PNG">			
+			</div>
+		</div>
+
+		<footer>
+			<div class="footer-links">				
+				<ul>
+					<li> <a href="https://www.mbc.net/pages/%D8%B9%D9%86-%D8%A7%D9%84%D9%85%D9%88%D9%82%D8%B9">عن الموقع  </a> </li>
+					<li> <a href="https://www.mbc.net/ar/corporate.html"> About MBC Group </a> </li>
+					<li> <a href="https://www.mbc.net/ar/corporate/csr.html"> MBC الامل  </a> </li>
+					<li> <a href="https://mobc.mbc.net/wap_portal_H/FrmNewest.aspx?&ID=0&IsCT=0&User_ID="> MoBC </a> </li>
+					<li> <a href="https://ehff.fa.em2.oraclecloud.com/hcmUI/CandidateExperience/en/sites/CX_2001"> Careers </a> </li>
+					<li> <a href="https://www.mbc.net/ar/corporate/frequencies/taradod.html">ترددات القنوات  </a> </li>
+					<li> <a href="https://www.mbc.net/pages/%D8%A7%D8%AA%D8%B5%D9%84-%D8%A8%D9%86%D8%A7"> اتصل بنا  </a> </li>
+					<li> <a href="https://www.mbc.net/pages/%D8%A3%D8%B9%D9%84%D9%86-%D9%85%D8%B9%D9%86%D8%A7">أعلن معنا  </a> </li>
+					<li> <a href="https://www.mbc.net/ar/hd.html"> HD </a> </li>
+					<li> <a href="https://www.mbc.net/pages/%D8%B4%D8%B1%D9%88%D8%B7-%D8%A7%D9%84%D8%A7%D8%B3%D8%AA%D8%AE%D8%AF%D8%A7%D9%85">شروط الاستخدام </a> </li>
+					<li> <a href="https://www.mbc.net/pages/-%D8%B3%D9%8A%D8%A7%D8%B3%D9%80%D8%A9-%D8%A7%D9%84%D8%AE%D8%B5%D9%88%D8%B5%D9%8A%D9%80%D8%A9"> سياسة الخصوصية </a> </li>
+				</ul>
+			</div>
+			<p class="copy"> جميع الحقوق محفوظة لمجموعة MBC 2020 © </p>
+		</footer>
+
 		<script type="text/javascript" src="main.js"></script>
 	</body>
 	</html>
