--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 	<!DOCTYPE html>
 	<html lang="ar" dir="rtl">
 	<head>
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+              integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+              crossorigin="anonymous">
+     	</script>
 		<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,20 +17,20 @@
 	</head>
 	<body>
 		<header>
-			<div class="header">
+			<div class="header" id="myHeader">
 				<div class="header1">
 					<div class="list-logo">
-						<div class="logo"> <img src="./imgs/logo-mbc@3x.png" class="logo"> </div>
+						<div class="logo"> <a href="https://www.mbc.net/"> <img src="./imgs/logo-mbc@3x.png" class="logo"> </a> </div>
 					<ul class="head-ul">
-						<li> <a href="https://www.mbc.net/home-page"></a> الرئيسية </li>
-						<li> <a href="https://www.mbc.net/shows"></a> البرامج  </li>
-						<li> <a href="https://www.mbc.net/channels"></a> القنوات </li>
-						<li> <a href="https://www.mbc.net/grid"></a>جدول البرامج  </li>
-						<li> <a href="https://www.mbc.net/apps"></a> تطبيقات ومناسبات </li>						
+						<li> <a href="https://www.mbc.net/home-page" > الرئيسية </a></li>
+						<li> <a href="https://www.mbc.net/shows" > البرامج  </a></li>
+						<li> <a href="https://www.mbc.net/channels" > القنوات </a></li>
+						<li> <a href="https://www.mbc.net/grid" >جدول البرامج  </a></li>
+						<li> <a href="https://www.mbc.net/apps" >تطبيقات ومناسبات </a></li>						
 					</ul>
 					</div>
 				<div>
-					<input type="search" name="search" placeholder="بحث" rel="search" class="search" />
+					<input type="search" name="search" placeholder="بحث                                         🔎" rel="search" class="search" />
 				</div>
 				</div>
 			</div>	
@@ -55,28 +59,28 @@
 		<div class="programs">
 			<h2 class="h2"> برامجنا  </h2>
 			<div class="programmes">
-				<img src="./imgs/Capture1.PNG">
-				<img src="./imgs/Capture2.PNG">
-				<img src="./imgs/Capture3.PNG">
-				<img src="./imgs/Capture4.PNG">
-				<img src="./imgs/Capture5.PNG">			
+				<img src="./imgs/Capture1.PNG" title="Planet Action يأخذكم بلانيت أكشن خلف كواليس أفضل الأفلام، ويعرفكم على كل ما يتعلق بها من موسيقى ومؤثرات، و ... عدد الحلقات 60، الموسم 1">
+				<img src="./imgs/Capture2.PNG" title="Fashion Forward يقدم البرنامج نظرة عن كثب على العالم الفاتن لأكثر النجوم اناقة، وآخر أخبار نجوم الموضة في عالم عرض الازياء، عدد الحلقات 39، الموسم 1 ">
+				<img src="./imgs/Capture3.PNG" title="Making The Movies برنامج يسلط الضوء على كيفية صنع الافلام من الألف للياء، ابتداء من التقنيات الرائعة والمواضيع الشيقة، عدد الحلقات 30، الموسم الاول">
+				<img src="./imgs/Capture4.PNG" title="Action Zone برنامج يبقيك على إطلاع دائم حول أحدث الافلام وأكبر العروض الاولى في العالم، عدد الحلقات 37، الموسم 3">
+				<img src="./imgs/Capture5.PNG" title="سكووب مع ريا تجوب ريا أبي راشد العالم لإجراء مقابلات حصرية مع أكبر وألمع النجوم في مجالي الموسيقى والافلام، عدد الحلقات 38، الموسم 2020">			
 			</div>
 		</div>
 
 		<footer>
 			<div class="footer-links">				
 				<ul>
-					<li> <a href="https://www.mbc.net/pages/%D8%B9%D9%86-%D8%A7%D9%84%D9%85%D9%88%D9%82%D8%B9">عن الموقع  </a> </li>
-					<li> <a href="https://www.mbc.net/ar/corporate.html"> About MBC Group </a> </li>
-					<li> <a href="https://www.mbc.net/ar/corporate/csr.html"> MBC الامل  </a> </li>
-					<li> <a href="https://mobc.mbc.net/wap_portal_H/FrmNewest.aspx?&ID=0&IsCT=0&User_ID="> MoBC </a> </li>
-					<li> <a href="https://ehff.fa.em2.oraclecloud.com/hcmUI/CandidateExperience/en/sites/CX_2001"> Careers </a> </li>
-					<li> <a href="https://www.mbc.net/ar/corporate/frequencies/taradod.html">ترددات القنوات  </a> </li>
-					<li> <a href="https://www.mbc.net/pages/%D8%A7%D8%AA%D8%B5%D9%84-%D8%A8%D9%86%D8%A7"> اتصل بنا  </a> </li>
-					<li> <a href="https://www.mbc.net/pages/%D8%A3%D8%B9%D9%84%D9%86-%D9%85%D8%B9%D9%86%D8%A7">أعلن معنا  </a> </li>
-					<li> <a href="https://www.mbc.net/ar/hd.html"> HD </a> </li>
-					<li> <a href="https://www.mbc.net/pages/%D8%B4%D8%B1%D9%88%D8%B7-%D8%A7%D9%84%D8%A7%D8%B3%D8%AA%D8%AE%D8%AF%D8%A7%D9%85">شروط الاستخدام </a> </li>
-					<li> <a href="https://www.mbc.net/pages/-%D8%B3%D9%8A%D8%A7%D8%B3%D9%80%D8%A9-%D8%A7%D9%84%D8%AE%D8%B5%D9%88%D8%B5%D9%8A%D9%80%D8%A9"> سياسة الخصوصية </a> </li>
+					<li> <a id="link" href="https://www.mbc.net/pages/%D8%B9%D9%86-%D8%A7%D9%84%D9%85%D9%88%D9%82%D8%B9">عن الموقع  </a> </li>
+					<li> <a id="link" href="https://www.mbc.net/ar/corporate.html"> About MBC Group </a> </li>
+					<li> <a id="link" href="https://www.mbc.net/ar/corporate/csr.html"> MBC الامل  </a> </li>
+					<li> <a id="link" href="https://mobc.mbc.net/wap_portal_H/FrmNewest.aspx?&ID=0&IsCT=0&User_ID="> MoBC </a> </li>
+					<li> <a id="link" href="https://ehff.fa.em2.oraclecloud.com/hcmUI/CandidateExperience/en/sites/CX_2001"> Careers </a> </li>
+					<li> <a id="link" href="https://www.mbc.net/ar/corporate/frequencies/taradod.html">ترددات القنوات  </a> </li>
+					<li> <a id="link" href="https://www.mbc.net/pages/%D8%A7%D8%AA%D8%B5%D9%84-%D8%A8%D9%86%D8%A7"> اتصل بنا  </a> </li>
+					<li> <a id="link" href="https://www.mbc.net/pages/%D8%A3%D8%B9%D9%84%D9%86-%D9%85%D8%B9%D9%86%D8%A7">أعلن معنا  </a> </li>
+					<li> <a id="link" href="https://www.mbc.net/ar/hd.html"> HD </a> </li>
+					<li> <a id="link" href="https://www.mbc.net/pages/%D8%B4%D8%B1%D9%88%D8%B7-%D8%A7%D9%84%D8%A7%D8%B3%D8%AA%D8%AE%D8%AF%D8%A7%D9%85">شروط الاستخدام </a> </li>
+					<li> <a id="link" href="https://www.mbc.net/pages/-%D8%B3%D9%8A%D8%A7%D8%B3%D9%80%D8%A9-%D8%A7%D9%84%D8%AE%D8%B5%D9%88%D8%B5%D9%8A%D9%80%D8%A9"> سياسة الخصوصية </a> </li>
 				</ul>
 			</div>
 			<p class="copy"> جميع الحقوق محفوظة لمجموعة MBC 2020 © </p>
